--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>baidubaijia</title>
+    <title>百度百家</title>
     <link rel="stylesheet" type="text/css" href="static/reset.css"/>
   </head>
   <body>
